# Terminal-Spotify

./: README.md  haskify.cabal  refresh_token.txt
app/: Main.hs
src/: Haskify.hs  Types.hs
