name:                haskify
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskify#readme
license:             BSD3
author:              John Kastner and Colin Burr
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskify, Types
  build-depends:       base >= 4.7 && < 5, wreq, lens, aeson, lens-aeson
                     , base64-bytestring, text, time, bytestring, containers, transformers, mtl, unordered-containers
  default-extensions:  OverloadedStrings, RecordWildCards
  default-language: Haskell2010


executable terminal-spotify-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
      aeson
    , base >=4.7 && <5
    , base64-bytestring
    , bytestring
    , haskify
    , lens
    , monad-extras
    , text
    , transformers
    , wreq
    , MissingH

  default-language: Haskell2010
